@@ -41,37 +41,27 @@
     <jacoco.min.branchcoverage>0.60</jacoco.min.branchcoverage>
     <jacoco.skip>true</jacoco.skip>
     <javaModulesSurefireArgLine>
-      --add-exports com.generic.core/com.generic.core.implementation=org.junit.platform.commons
-      --add-exports com.generic.core/com.generic.core.implementation.http.rest=ALL-UNNAMED
-      --add-exports com.generic.core/com.generic.core.implementation.serializer=ALL-UNNAMED
-      --add-exports com.generic.core/com.generic.core.implementation.util=org.junit.platform.commons
-      --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
-      --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
-
       --add-opens com.generic.core/com.generic.core=ALL-UNNAMED
       --add-opens com.generic.core/com.generic.core.annotation=ALL-UNNAMED
-      --add-opens com.generic.core/com.generic.core.credential=ALL-UNNAMED,org.junit.platform.commons
-      --add-opens com.generic.core/com.generic.core.http=ALL-UNNAMED,org.junit.platform.commons
+      --add-opens com.generic.core/com.generic.core.credential=ALL-UNNAMED
+      --add-opens com.generic.core/com.generic.core.http=ALL-UNNAMED
       --add-opens com.generic.core/com.generic.core.http.annotation=ALL-UNNAMED
       --add-opens com.generic.core/com.generic.core.http.client=ALL-UNNAMED
       --add-opens com.generic.core/com.generic.core.http.exception=ALL-UNNAMED
-      --add-opens com.generic.core/com.generic.core.http.models=ALL-UNNAMED,org.junit.platform.commons
+      --add-opens com.generic.core/com.generic.core.http.models=ALL-UNNAMED
       --add-opens com.generic.core/com.generic.core.http.pipeline=ALL-UNNAMED
-      --add-opens com.generic.core/com.generic.core.http.policy=ALL-UNNAMED,org.junit.platform.commons
+      --add-opens com.generic.core/com.generic.core.http.policy=ALL-UNNAMED
       --add-opens com.generic.core/com.generic.core.implementation=ALL-UNNAMED
-      --add-opens com.generic.core/com.generic.core.implementation.http=ALL-UNNAMED,org.junit.platform.commons
+      --add-opens com.generic.core/com.generic.core.implementation.http=ALL-UNNAMED
       --add-opens com.generic.core/com.generic.core.implementation.http.annotation=ALL-UNNAMED
       --add-opens com.generic.core/com.generic.core.implementation.http.policy=ALL-UNNAMED
-      --add-opens com.generic.core/com.generic.core.implementation.http.rest=ALL-UNNAMED,org.junit.platform.commons
+      --add-opens com.generic.core/com.generic.core.implementation.http.rest=ALL-UNNAMED
       --add-opens com.generic.core/com.generic.core.implementation.http.serializer=ALL-UNNAMED
-      --add-opens com.generic.core/com.generic.core.implementation.http.util=ALL-UNNAMED
-      --add-opens com.generic.core/com.generic.core.implementation.serializer=ALL-UNNAMED,org.junit.platform.commons
-      --add-opens com.generic.core/com.generic.core.implementation.test=ALL-UNNAMED
       --add-opens com.generic.core/com.generic.core.implementation.util=ALL-UNNAMED
       --add-opens com.generic.core/com.generic.core.models=ALL-UNNAMED
       --add-opens com.generic.core/com.generic.core.util=ALL-UNNAMED
       --add-opens com.generic.core/com.generic.core.util.configuration=ALL-UNNAMED
-      --add-opens com.generic.core/com.generic.core.util.serializer=ALL-UNNAMED,org.junit.platform.commons
+      --add-opens com.generic.core/com.generic.core.util.serializer=ALL-UNNAMED
 
       --add-reads com.generic.core=ALL-UNNAMED
     </javaModulesSurefireArgLine>
@@ -82,7 +72,9 @@
     <!-- Enables fail on deprecated API usage. -->
     <compiler.failondeprecatedstatus/>
 
-    <javadoc.excludePackageNames>com.generic.json,com.azure.json,com.azure.xml,com.azure.core*</javadoc.excludePackageNames>
+    <javadoc.excludePackageNames>
+      com.generic.json,com.azure.json,com.azure.xml,com.azure.core*1
+    </javadoc.excludePackageNames>
   </properties>
 
   <dependencies>
@@ -96,32 +88,8 @@
       <artifactId>slf4j-api</artifactId>
       <version>1.7.36</version> <!-- {x-version-update;org.slf4j:slf4j-api;external_dependency} -->
     </dependency>
-    <dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-server</artifactId>
-      <version>9.4.53.v20231009</version> <!-- {x-version-update;org.eclipse.jetty:jetty-server;external_dependency} -->
-    </dependency>
-    <dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-servlet</artifactId>
-      <version>9.4.53.v20231009</version> <!-- {x-version-update;org.eclipse.jetty:jetty-servlet;external_dependency} -->
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>5.9.3</version> <!-- {x-version-update;org.junit.jupiter:junit-jupiter-api;external_dependency} -->
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.9.3</version> <!-- {x-version-update;org.junit.jupiter:junit-jupiter-engine;external_dependency} -->
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-params</artifactId>
-      <version>5.9.3</version> <!-- {x-version-update;org.junit.jupiter:junit-jupiter-params;external_dependency} -->
-    </dependency>
 
+    <!-- Test dependencies -->
     <dependency>
       <groupId>com.generic</groupId>
       <artifactId>generic-json</artifactId>
@@ -130,15 +98,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.openjdk.jmh</groupId>
-      <artifactId>jmh-core</artifactId>
-      <version>1.36</version> <!-- {x-version-update;org.openjdk.jmh:jmh-core;external_dependency} -->
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openjdk.jmh</groupId>
-      <artifactId>jmh-generator-annprocess</artifactId>
-      <version>1.36</version> <!-- {x-version-update;org.openjdk.jmh:jmh-generator-annprocess;external_dependency} -->
+      <groupId>javax.json</groupId>
+      <artifactId>javax.json-api</artifactId>
+      <version>1.1.4</version> <!-- {x-version-update;javax.json:javax.json-api;external_dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -148,9 +110,33 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>javax.json</groupId>
-      <artifactId>javax.json-api</artifactId>
-      <version>1.1.4</version> <!-- {x-version-update;javax.json:javax.json-api;external_dependency} -->
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-server</artifactId>
+      <version>9.4.53.v20231009</version> <!-- {x-version-update;org.eclipse.jetty:jetty-server;external_dependency} -->
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-servlet</artifactId>
+      <version>9.4.53.v20231009</version> <!-- {x-version-update;org.eclipse.jetty:jetty-servlet;external_dependency} -->
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.9.3</version> <!-- {x-version-update;org.junit.jupiter:junit-jupiter-engine;external_dependency} -->
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>5.9.3</version> <!-- {x-version-update;org.junit.jupiter:junit-jupiter-params;external_dependency} -->
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openjdk.jmh</groupId>
+      <artifactId>jmh-generator-annprocess</artifactId>
+      <version>1.36</version> <!-- {x-version-update;org.openjdk.jmh:jmh-generator-annprocess;external_dependency} -->
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -182,11 +168,6 @@
             <bannedDependencies>
               <includes>
                 <include>org.slf4j:slf4j-api:[1.7.36]</include> <!-- {x-include-update;org.slf4j:slf4j-api;external_dependency} -->
-                <include>org.junit.jupiter:junit-jupiter-api:[5.9.3]</include> <!-- {x-include-update;org.junit.jupiter:junit-jupiter-api;external_dependency} -->
-                <include>org.junit.jupiter:junit-jupiter-params:[5.9.3]</include> <!-- {x-include-update;org.junit.jupiter:junit-jupiter-params;external_dependency} -->
-                <include>org.junit.jupiter:junit-jupiter-engine:[5.9.3]</include> <!-- {x-include-update;org.junit.jupiter:junit-jupiter-engine;external_dependency} -->
-                <include>org.eclipse.jetty:jetty-server:[9.4.53.v20231009]</include> <!-- {x-include-update;org.eclipse.jetty:jetty-server;external_dependency} -->
-                <include>org.eclipse.jetty:jetty-servlet:[9.4.53.v20231009]</include> <!-- {x-include-update;org.eclipse.jetty:jetty-servlet;external_dependency} -->
               </includes>
             </bannedDependencies>
           </rules>
